--- a/Unretiner/Classes/View/en.lproj/UnretinaViewController.xib
+++ b/Unretiner/Classes/View/en.lproj/UnretinaViewController.xib
@@ -41,29 +41,19 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="NSCustomView" id="38194497">
-						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{0, 30}, {480, 240}}</string>
-						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="73450366"/>
-						<string key="NSReuseIdentifierKey">_NS:499</string>
-						<string key="NSClassName">NSDroppableView</string>
-					</object>
 					<object class="NSTextField" id="73450366">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">256</int>
-						<string key="NSFrame">{{38, 136}, {404, 20}}</string>
+						<string key="NSFrame">{{73, 110}, {335, 50}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="611662926"/>
 						<string key="NSReuseIdentifierKey">_NS:3936</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="83377106">
-							<int key="NSCellFlags">604110400</int>
-							<int key="NSCellFlags2">138414080</int>
-							<string key="NSContents">Drag retina images here (with @2x or without @2x)</string>
+							<int key="NSCellFlags">604110336</int>
+							<int key="NSCellFlags2">138412032</int>
+							<string key="NSContents">Drag a folder containing retina images here (with @2x or without @2x)</string>
 							<object class="NSFont" key="NSSupport">
 								<string key="NSName">Helvetica</string>
 								<double key="NSSize">16</double>
@@ -86,7 +76,7 @@
 							</object>
 						</object>
 					</object>
-					<object class="NSButton" id="153249957">
+					<object class="NSButton" id="617289415">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{227, 1}, {145, 30}}</string>
@@ -94,7 +84,7 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557719149"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="730177435">
+						<object class="NSButtonCell" key="NSCell" id="126115385">
 							<int key="NSCellFlags">-2080244224</int>
 							<int key="NSCellFlags2">0</int>
 							<string key="NSContents">Save in same folder</string>
@@ -103,14 +93,14 @@
 								<double key="NSSize">13</double>
 								<int key="NSfFlags">1044</int>
 							</object>
-							<reference key="NSControlView" ref="153249957"/>
+							<reference key="NSControlView" ref="617289415"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<object class="NSCustomResource" key="NSNormalImage" id="1016209360">
+							<object class="NSCustomResource" key="NSNormalImage" id="821045439">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">NSSwitch</string>
 							</object>
-							<object class="NSButtonImageSource" key="NSAlternateImage" id="1000469302">
+							<object class="NSButtonImageSource" key="NSAlternateImage" id="142267219">
 								<string key="NSImageName">NSSwitch</string>
 							</object>
 							<string key="NSAlternateContents"/>
@@ -135,8 +125,8 @@
 							<reference key="NSControlView" ref="557719149"/>
 							<int key="NSButtonFlags">1211912703</int>
 							<int key="NSButtonFlags2">2</int>
-							<reference key="NSNormalImage" ref="1016209360"/>
-							<reference key="NSAlternateImage" ref="1000469302"/>
+							<reference key="NSNormalImage" ref="821045439"/>
+							<reference key="NSAlternateImage" ref="142267219"/>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
 							<int key="NSPeriodicDelay">200</int>
@@ -149,7 +139,7 @@
 						<string key="NSFrame">{{11, 3}, {29, 25}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="153249957"/>
+						<reference key="NSNextKeyView" ref="617289415"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="475097997">
 							<int key="NSCellFlags">-2080244224</int>
@@ -183,7 +173,7 @@
 						<string key="NSFrameSize">{480, 270}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="38194497"/>
+						<reference key="NSNextKeyView" ref="73450366"/>
 						<string key="NSReuseIdentifierKey">_NS:1658</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="941985466">
@@ -201,11 +191,21 @@
 						</object>
 						<bool key="NSEditable">YES</bool>
 					</object>
+					<object class="NSCustomView" id="38194497">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{0, 30}, {480, 240}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="935938549"/>
+						<string key="NSReuseIdentifierKey">_NS:499</string>
+						<string key="NSClassName">NSDroppableView</string>
+					</object>
 				</array>
 				<string key="NSFrameSize">{480, 270}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="935938549"/>
+				<reference key="NSNextKeyView" ref="38194497"/>
 				<string key="NSClassName">NSView</string>
 			</object>
 		</array>
@@ -239,7 +239,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">saveSameCheckBox</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="153249957"/>
+						<reference key="destination" ref="617289415"/>
 					</object>
 					<int key="connectionID">23</int>
 				</object>
@@ -291,11 +291,11 @@
 						<reference key="object" ref="1005"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="611662926"/>
-							<reference ref="73450366"/>
 							<reference ref="557719149"/>
 							<reference ref="935938549"/>
 							<reference ref="38194497"/>
-							<reference ref="153249957"/>
+							<reference ref="617289415"/>
+							<reference ref="73450366"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -359,16 +359,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="153249957"/>
+						<reference key="object" ref="617289415"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="730177435"/>
+							<reference ref="126115385"/>
 						</array>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="730177435"/>
-						<reference key="parent" ref="153249957"/>
+						<reference key="object" ref="126115385"/>
+						<reference key="parent" ref="617289415"/>
 					</object>
 				</array>
 			</object>
@@ -430,17 +430,20 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">checkBox</string>
-						<string key="NS.object.0">NSButton</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">checkBox</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="checkBox">NSButton</string>
+						<string key="saveSameCheckBox">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="checkBox">
 							<string key="name">checkBox</string>
 							<string key="candidateClassName">NSButton</string>
 						</object>
-					</object>
+						<object class="IBToOneOutletInfo" key="saveSameCheckBox">
+							<string key="name">saveSameCheckBox</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/UnretinaViewController.h</string>
